@@ -5,20 +5,30 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
+import { Arr, Strings } from '@ephox/katamari';
 import { SugarElement } from '@ephox/sugar';
-import Tools from '../api/util/Tools';
-import * as ElementType from './ElementType';
+import DOMUtils from '../api/dom/DOMUtils';
 import * as NodeType from './NodeType';
+import * as Empty from './Empty';
 
-const surroundedBySpans = function (node) {
-  const previousIsSpan = node.previousSibling && node.previousSibling.nodeName === 'SPAN';
-  const nextIsSpan = node.nextSibling && node.nextSibling.nodeName === 'SPAN';
+const isSpan = (node: Node): node is HTMLSpanElement =>
+  node && node.nodeName.toLowerCase() === 'span';
+
+const surroundedBySpans = (node: Node) => {
+  const previousIsSpan = isSpan(node.previousSibling);
+  const nextIsSpan = isSpan(node.nextSibling);
   return previousIsSpan && nextIsSpan;
 };
 
-const isBookmarkNode = function (node) {
-  return node && node.tagName === 'SPAN' && node.getAttribute('data-mce-type') === 'bookmark';
-};
+const isBookmarkNode = (node: Node) =>
+  isSpan(node) && node.getAttribute('data-mce-type') === 'bookmark';
+
+// Keep text nodes with only spaces if surrounded by spans.
+// eg. "<p><span>a</span> <span>b</span></p>" should keep space between a and b
+const isKeepTextNode = (node: Node) =>
+  NodeType.isText(node) && (Strings.trim(node.data).length !== 0 || surroundedBySpans(node));
+
+const isDocument = (node: Node) => NodeType.isDocumentFragment(node) || NodeType.isDocument(node);
 
 // W3C valid browsers tend to leave empty nodes to the left/right side of the contents - this makes sense
 // but we don't want that in our code since it serves no purpose for the end user
@@ -28,46 +38,35 @@ const isBookmarkNode = function (node) {
 //   <p>text 1<span></span></p><b>CHOP</b><p><span></span>text 2</p>
 // this function will then trim off empty edges and produce:
 //   <p>text 1</p><b>CHOP</b><p>text 2</p>
-const trimNode = function (dom, node) {
-  let i, children = node.childNodes;
-
+const trimNode = (dom: DOMUtils, node: Node): Node => {
   if (NodeType.isElement(node) && isBookmarkNode(node)) {
-    return;
+    return node;
   }
 
-  for (i = children.length - 1; i >= 0; i--) {
+  const children = node.childNodes;
+  for (let i = children.length - 1; i >= 0; i--) {
     trimNode(dom, children[i]);
   }
 
-  if (NodeType.isDocument(node) === false) {
-    // Keep non whitespace text nodes
-    if (NodeType.isText(node) && node.nodeValue.length > 0) {
-      // Keep if parent element is a block or if there is some useful content
-      const trimmedLength = Tools.trim(node.nodeValue).length;
-      if (dom.isBlock(node.parentNode) || trimmedLength > 0) {
-        return;
+  if (!isDocument(node) && !isKeepTextNode(node) && Empty.isEmpty(SugarElement.fromDom(node), false)) {
+    if (NodeType.isElement(node)) {
+      const currentChildren = node.childNodes;
+
+      // Don't remove if there's a br as a child, eg: <p><br></p>
+      if (Arr.exists(currentChildren, NodeType.isBr)) {
+        return node;
       }
-      // Also keep text nodes with only spaces if surrounded by spans.
-      // eg. "<p><span>a</span> <span>b</span></p>" should keep space between a and b
-      if (trimmedLength === 0 && surroundedBySpans(node)) {
-        return;
-      }
-    } else if (NodeType.isElement(node)) {
+
       // If the only child is a bookmark then move it up
-      children = node.childNodes;
-
-      if (children.length === 1 && isBookmarkNode(children[0])) {
-        node.parentNode.insertBefore(children[0], node);
-      }
-
-      // Keep non empty elements and void elements
-      if (children.length || ElementType.isVoid(SugarElement.fromDom(node))) {
-        return;
+      if (currentChildren.length === 1 && isBookmarkNode(currentChildren[0])) {
+        node.parentNode.insertBefore(currentChildren[0], node);
       }
     }
 
     dom.remove(node);
+    return node;
   }
+
   return node;
 };
 
