@@ -212,6 +212,11 @@ UnitTest.test('DOMUtils.is', () => {
   Assert.eq('', false, DOM.is(DOM.get('textX'), 'div#textX2'));
   Assert.eq('', false, DOM.is(null, 'div#textX2'));
 
+  DOM.get('test').innerHTML = '<div><span class="test">ab<span><a id="test2" href="">abc</a>c</span></span></div>';
+
+  Assert.eq('', true, DOM.is(DOM.select('span', 'test'), 'span'));
+  Assert.eq('', true, DOM.is(DOM.select('#test2', 'test'), '#test2'));
+
   DOM.remove('test');
 });
 
@@ -355,16 +360,6 @@ UnitTest.test('DOMUtils.getParents', () => {
   Assert.eq('', 2, DOM.getParents('test2', 'span').length);
   Assert.eq('', 1, DOM.getParents('test2', 'span.test').length);
   Assert.eq('', 0, DOM.getParents('test2', 'body', DOM.get('test')).length);
-
-  DOM.remove('test');
-});
-
-UnitTest.test('DOMUtils.is', () => {
-  DOM.add(document.body, 'div', { id: 'test' });
-  DOM.get('test').innerHTML = '<div><span class="test">ab<span><a id="test2" href="">abc</a>c</span></span></div>';
-
-  Assert.eq('', true, DOM.is(DOM.select('span', 'test'), 'span'));
-  Assert.eq('', true, DOM.is(DOM.select('#test2', 'test'), '#test2'));
 
   DOM.remove('test');
 });
@@ -582,6 +577,18 @@ UnitTest.test('DOMUtils.split', () => {
   point = DOM.select('ul li:nth-child(2)', DOM.get('test'))[0];
   DOM.split(parent, point);
   Assert.eq('', '<ul><li>first line<br><ul><li><span>second</span> <span>line</span></li></ul></li><li>third line<br></li></ul>', HtmlUtils.cleanHtml(DOM.get('test').innerHTML));
+
+  DOM.setHTML('test', '<p><b>&nbsp; <span>inner</span>text2</b></p>');
+  parent = DOM.select('p', DOM.get('test'))[0];
+  point = DOM.select('span', DOM.get('test'))[0];
+  DOM.split(parent, point);
+  Assert.eq('', '<p><b>&nbsp; </b></p><span>inner</span><p><b>text2</b></p>', HtmlUtils.cleanHtml(DOM.get('test').innerHTML));
+
+  DOM.setHTML('test', '<p><b><a id="anchor"></a><span>inner</span>text2</b></p>');
+  parent = DOM.select('p', DOM.get('test'))[0];
+  point = DOM.select('span', DOM.get('test'))[0];
+  DOM.split(parent, point);
+  Assert.eq('', '<p><b><a id="anchor"></a></b></p><span>inner</span><p><b>text2</b></p>', HtmlUtils.cleanHtml(DOM.get('test').innerHTML));
 
   DOM.remove('test');
 });
