@@ -17,6 +17,7 @@ Version 5.5.0 (TBD)
     Fixed up and down keyboard navigation not working for inline `contenteditable="false"` elements #TINY-6226
     Fixed the `unlink` toolbar button not working when selecting multiple links #TINY-4867
     Fixed the `link` dialog not showing the "Text to display" field in some valid cases #TINY-5205
+    Fixed some content was incorrectly removed when using the `DOMUtils.split()` API #TINY-6294
     Fixed pressing escape not focusing the editor when using multiple toolbars #TINY-6230
 Version 5.4.2 (TBD)
     Fixed clicking on notifications causing inline editors to hide #TINY-6058
